// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableRow > should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render with onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="table-row border-b border-dashed transition-colors duration-100 cursor-pointer last:border-b-0 border-theme-secondary-300 table-row-unselected group dark:border-theme-secondary-800"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="transition-colors duration-100 group"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
